--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - run: docker tag greg2010/mars greg2010/mars:${CIRCLE_BRANCH}_latest
       - run: docker tag greg2010/mars greg2010/mars:latest
       - run: docker login --username ${DOCKER_USER} --password ${DOCKER_PASSWORD}
-      - run: docker push greg2010/ranker
+      - run: docker push greg2010/mars
 workflows:
   version: 2
   build-and-deploy:
