--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,9 +4,8 @@ mars {
     imgBaseUrl = "http://imageserver.eveonline.com"
     esiBaseUrl = "https://esi.evetech.net/latest"
   }
-  discord {
-    token = ${MARS_DISCORD_TOKEN}
-    status = "9x9"
-    status = ${?MARS_DISCORD_STATUS}
+  fs {
+    tempFolder = "temp"
+    tempFolder = ${?MARS_TEMP_FOLDER}
   }
 }
