--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,9 +3,13 @@ mars {
     zkbBaseUrl = "https://zkillboard.com"
     imgBaseUrl = "http://imageserver.eveonline.com"
     esiBaseUrl = "https://esi.evetech.net/latest"
+    dotlanBaseUrl = "http://evemaps.dotlan.net"
   }
-  fs {
-    tempFolder = "temp"
-    tempFolder = ${?MARS_TEMP_FOLDER}
+  redis {
+    host = "localhost"
+    host = ${?MARS_REDIS_HOST}
+    port = 26379
+    port = ${?MARS_REDIS_PORT}
+
   }
 }
