pass mars conf file location as env var instead of arg

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,6 @@
 mars {
+  configFilePath = "mars.conf"
+  configFilePath = ${?MARS_CONFIG_FILE_PATH}
   eve {
     zkbBaseUrl = "https://zkillboard.com"
     imgBaseUrl = "http://imageserver.eveonline.com"
