--- a/mars.sv.conf
+++ b/mars.sv.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:mars]
-command=java -server -Xms64m -Xmx256m -XX:+AggressiveOpts -XX:+UseCompressedOops -jar /kys/mars.jar -c mars.conf
+command=java -server -Xms64m -Xmx256m -XX:+AggressiveOpts -XX:+UseCompressedOops -jar /kys/mars.jar
 redirect_stderr=true
 redirect_stdout=true
 stdout_logfile=/dev/stdout
